third_party/rust/indoc/v1/crate/tests/ui/non-string.stderr
error: argument must be a single string literal
 --> $DIR/non-string.rs:4:12
  |
4 |     indoc!(64);
  |            ^^
