third_party/rust/indoc/v1/crate/tests/ui/non-string.rs
use indoc::indoc;

fn main() {
    indoc!(64);
}
